--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -7,12 +7,16 @@ fluks depends on a few libraries: libdevmapper, libuuid, and boost.  It also use
 
 = Details =
 
-_I'll clean this up later, as I learn the way of the wiki:_
+libdevmapper comes with Device-mapper from [http://sources.redhat.com/dm/].
 
-libdevmapper comes with Device-mapper from http://sources.redhat.com/dm/
+libuuid is part of e2fsprogs from [http://e2fsprogs.sf.net/].
 
-libuuid is part of e2fsprogs from http://e2fsprogs.sourceforge.net/
+boost is at [http://boost.org/ boost.org].  If you use C++ but not boost, your life must be miserable.
 
-boost is at http://boost.org/ .  If you use C++ but not boost, then your life must be miserable.
+After the libraries are installed, from the main source directory:
 
-After the libraries are installed, you can run bjam from the directory with the Jamroot file in it.  bjam goes by other names like Boost.Build or Boost.Jam.
+{{{
+$ bjam release
+}}}
+
+bjam is derived from Perforce jam, is also known as Boost.Jam, and is a part of Boost.Build.
