--- a/tools/serpent-gen/README
+++ b/tools/serpent-gen/README
@@ -1,1 +1,1 @@
-Run `make'.  Each binary will produce one of the bitslice sbox functions, each writing out to a unique file.
+Run `make', run `./brute' for usage.
