--- a/wiki/Operations.wiki
+++ b/wiki/Operations.wiki
@@ -13,6 +13,7 @@ First, you must decide on a cipher spec.  Some fields are optional, but the form
 
 First, select a cipher (note that possible key sizes appear in parenthesis).  The NSA recommends AES :), but I recommend Serpent or Camilla (Camilla is not in the current version of LUKS).
 
+<img src='do_not_want.jpg'>
 The block mode defaults to ECB, which you _do not want_, so you should specify one.  Generally CBC is good, but the others (all being non-standard in LUKS) are good too.  For example, CTR or 'counter mode' is really easy to implement symmetrically.
 
 The IV (initial vector) generation mode defaults to 'plain' (except ECB, which has no IV), which uses the sector number as the IV and has no IV hash function.  This is probably safe for most purposes, but the paranoid should use ESSIV.
