--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -7,16 +7,14 @@ fluks depends on a few libraries: libdevmapper, libuuid, and boost.  It also use
 
 = Details =
 
-libdevmapper comes with Device-mapper from [http://sources.redhat.com/dm/].
+libdevmapper comes with Device-mapper from [http://sources.redhat.com/dm/ sources.redhat.com/dm].
 
-libuuid is part of e2fsprogs from [http://e2fsprogs.sf.net/].
+libuuid is part of e2fsprogs from [http://e2fsprogs.sf.net/ e2fsprogs.sf.net].
 
 boost is at [http://boost.org/ boost.org].  If you use C++ but not boost, your life must be miserable.
 
 After the libraries are installed, from the main source directory:
 
-{{{
-$ bjam release
-}}}
+`bjam release`
 
 bjam is derived from Perforce jam, is also known as Boost.Jam, and is a part of Boost.Build.
