Edited wiki page through web user interface.
git-svn-id: https://fluks.googlecode.com/svn@203 6b01645e-0d02-11de-a42d-873b86d837ff

--- a/wiki/Building.wiki
+++ b/wiki/Building.wiki
@@ -2,7 +2,7 @@
 
 = Building fluks =
 
-fluks depends on a few libraries: libdevmapper, libuuid, and boost.  It also uses an obscure build system called bjam (with other names, as well).  bjam (Boost.Jam) is derived from Perforce Jam, and is a part of Boost.Build.
+fluks depends on a few libraries: libdevmapper, libuuid, and boost.  It also uses an obscure build system called bjam (with other names, as well).  bjam (Boost.Jam) is derived from FTJam, Perforce Jam before that, and is a part of Boost.Build.
 
 
 == Details ==
